Fix/ov 37088 37089 alert and checkbox (#125)
* fix(alert): align icon on top of component

* fix(checkbox): solve different issues
- controlled state
- position of checkbox with long content
- checkbox size in small space

* fix(checkbox): lint error

* fix(checkbox): update useEffect after review comment

--- a/packages/Alert/src/alert.scss
+++ b/packages/Alert/src/alert.scss
@@ -136,7 +136,7 @@
 
     &--medium-centered {
       @include mixins.ids-alert-mixin-icon-position-size(
-        center,
+        flex-start,
         var(--ids-alert-icon-size-medium)
       );
     }
